# gothic-lockpicking-tool

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build-app.yml  build-exe.yml
automation/: autoplay.ahk  autoplay.bat  autoplay.ini  autoplay.py
docs/: IMAGE_RECOGNITION.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
web/: index.html
