[package]
name = "gothic-lockpicking-tool"
version = "1.0.0"
description = "Gothic 1 Remake lockpicking solver and auto-player"
authors = ["Tiarin Hino"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "gothic_lockpicking_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
